--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">Research</a></li>
-	        		<li><a href="/blog">Publications</a></li>
+	        		<li><a href="/research">Research</a></li>
+	        		<li><a href="/publications">Publications</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
