--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/research">Research</a></li>
-	        		<li><a href="/publications">Publications</a></li>
+		        	<li><a href="/about.html">About</a></li>
+	        		<li><a href="/research.html">Research</a></li>
+	        		<li><a href="/publications.html">Publications</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
