--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/">Caitie McCafferty</a></li>
 		        	<li><a href="/about.html">About</a></li>
 	        		<li><a href="/research.html">Research</a></li>
 	        		<li><a href="/publications.html">Publications</a></li>
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:caitiemccafferty@gmail.com">email</a></li>
+	        		<li><a href="mailto:caitie.mccafferty@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/cmccaffe">github.com/cmccaffe</a></li>
 				</ul>
 			</footer>
