--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Caitie McCafferty</a></li>
 		        	<li><a href="/about.html">About</a></li>
-	        		<li><a href="/research.html">Research</a></li>
+	        		<li><a href="/research">Research</a></li>
 	        		<li><a href="/publications.html">Publications</a></li>
 	    		</ul>
 			</nav>
